tests/baselines/reference/couldNotSelectGenericOverload.errors.txt
==== tests/cases/compiler/couldNotSelectGenericOverload.ts (4 errors) ====
    function makeArray<T>(items: T[]): T[] { return items; }
    var b = [1, ""];
    var b1G = makeArray(1, ""); // any, no error
              ~~~~~~~~~
!!! couldNotSelectGenericOverload.ts(3,11): error TS2081: Supplied parameters do not match any signature of call target.
              ~~~~~~~~~
!!! couldNotSelectGenericOverload.ts(3,11): error TS2087: Could not select overload for 'call' expression.
    var b2G = makeArray(b); // any[]
    
    function makeArray2(items: any[]): any[] { return items; }
    var b3G = makeArray2(1, ""); // error
              ~~~~~~~~~~
!!! couldNotSelectGenericOverload.ts(7,11): error TS2081: Supplied parameters do not match any signature of call target.
              ~~~~~~~~~~
!!! couldNotSelectGenericOverload.ts(7,11): error TS2087: Could not select overload for 'call' expression.
    